# Final_Project_SM_Protocol

./: CMakeLists.txt  MQTTClient_publish.c  MQTT_PUBLISH2.c  SMP_MQTT_UDP.c  SMP_MQTT_UDP.h  SMP_PARAMS.txt  message_queue_sender_for_debug.c  mqtt_subscribe_msg_que_send.c  msg_rcv_que_udp_send.c  udp_client_for_debug.c  udp_rcv_mqtt_publish.c
